--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name" : "gulp-jade-sass",
 	"version" : "0.0.1",
 	"description" : "Gulp를 활용한 jade,sass 프로젝트 ",
-	"dependence" : {
+	"dependencies" : {
 		"gulp" : "^3.9.0",
 		"gulp-jade" : "^1.1.0",
 		"gulp-sass" : "^2.0.4"
